--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ JWT_SECRET=supersecretkeythatshouldnotbecommittedtorepo
 EMAIL_USER=quockp2@gmail.com
 EMAIL_PASS=nefj nrwp vkgy wgmm  # App Password của Gmail
 FRONTEND_URL=http://localhost:3000
+GEMINI_API_KEY=AIzaSyDK9R0FTaKEKRvqv8R2HFW_-cdjU5oVstU
 # Sau này deploy thì đổi thành https://yourdomain.com
